Update directory links for images

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="header">
             <div class="hrow1">
-                <img id="logo" src="/images/logo.png" alt="Project logo">
+                <img id="logo" src="./images/logo.png" alt="Project logo">
                 <ul class="header-links">
                     <li><a class="hlink" href="#">Home</a></li>
                     <li><a class="hlink" href="#">About</a></li>
